# word-gpt

./: LICENSE  README.md  docker-compose.yaml  pyproject.toml
resource/idioms/: idioms.csv
